tests/e2e/tests/pilot/testdata/networking/v1alpha3/virtualservice-route-tcp-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-route
  namespace: istio-system
spec:
  hosts:
  - c
  tcp:
  - match:
    - port: 90
      sourceLabels:
        app: a
    route:
    - destination:
        host: c
        subset: v2
        port:
          number: 90
      weight: 100
  - match:
    - port: 90
    route:
    - destination:
        host: c
        subset: v1
        port:
          number: 90
      weight: 100
